Updated homepage to include new staff.

--- a/index.html
+++ b/index.html
@@ -369,25 +369,25 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="" class="img-responsive img-circle" alt="">
-                        <h4></h4>
-                        <p class="text-muted"></p>
-                    </div>
-                </div>
+              <div class="col-sm-4">
+                  <div class="team-member">
+                      <img src="img/team/supsun.jpg" class="img-responsive img-circle" alt="Supsun">
+                      <h4>Supsun</h4>
+                      <p class="text-muted">Hub Admin</p>
+                  </div>
+              </div>
+              <div class="col-sm-4">
+                  <div class="team-member">
+                      <img src="img/team/darkhell.jpg" class="img-responsive img-circle" alt="DarkHell">
+                      <h4>DarkHell</h4>
+                      <p class="text-muted">Hub Admin</p>
+                  </div>
+              </div>
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/loque.jpg" class="img-responsive img-circle" alt="Loque">
                         <h4>Loque</h4>
                         <p class="text-muted">Event Manager</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/weedman.jpg" class="img-responsive img-circle" alt="WeedMaN">
-                        <h4>WeeDMaN</h4>
-                        <p class="text-muted">Game Admin | Webmaster</p>
                     </div>
                 </div>
             </div>
@@ -417,23 +417,46 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/supsun.jpg" class="img-responsive img-circle" alt="Supsun">
-                        <h4>Supsun</h4>
-                        <p class="text-muted">Hub Admin</p>
+                        <img src="img/team/ramdrop.jpg" class="img-responsive img-circle" alt="ramdrop">
+                        <h4>ramdrop</h4>
+                        <p class="text-muted">Game Admin</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/darkhell.jpg" class="img-responsive img-circle" alt="DarkHell">
-                        <h4>DarkHell</h4>
-                        <p class="text-muted">Hub Admin</p>
+                        <img src="img/team/globe.jpg" class="img-responsive img-circle" alt="globe">
+                        <h4>Globe</h4>
+                        <p class="text-muted">Game Admin</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/dickfish.jpg" class="img-responsive img-circle" alt="dickfish">
+                        <h4>dickfish</h4>
+                        <p class="text-muted">Game Admin</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-4">
+                  <div class="team-member">
+                      <img src="img/team/mastahbates.jpg" class="img-responsive img-circle" alt="MastahBates">
+                      <h4>MastahBates</h4>
+                      <p class="text-muted">Web Admin</p>
+                  </div>
+              </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/weedman.jpg" class="img-responsive img-circle" alt="WeedMaN">
+                        <h4>WeeDMaN</h4>
+                        <p class="text-muted">Web Admin</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/abhicatastrophe.jpg" class="img-responsive img-circle" alt="AbhiCatastrophe">
                         <h4>AbhiCatastrophe</h4>
-                        <p class="text-muted">Hub Admin | Webmaster</p>
+                        <p class="text-muted">Web Admin</p>
                     </div>
                 </div>
             </div>
