--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                                     <h4 class="subheading">5v5 Clan iCTF Cup</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">iF won Division 1!</p>
+                                    <p class="text-muted">instaFrenchies won Division 1!</p>
                                     <p class="text-muted">Beer and Chips won Division 2!</p>
                                     <p class="text-muted">Divine won Division 3!</p>
                                 </div>
